--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "keywords": [
     "git"
   ],
+  "bin": {
+    "git-inspect": "./index.js"
+  },
   "author": "nkazantsev",
   "license": "MIT",
   "dependencies": {
