--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "nkazantsev",
   "license": "MIT",
   "dependencies": {
-    "commander": "^2.17.1"
+    "commander": "^2.17.1",
+    "lodash": "^4.17.10",
+    "nodegit": "^0.22.2"
   }
 }
