--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "commander": "^2.17.1",
     "lodash": "^4.17.10",
     "nodegit": "^0.22.2"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "sinon": "^6.1.5"
   }
 }
