--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha ./lib/ --recursive",
-    "integration": "mocha ./integration/*",
+    "integration": "mocha ./integration/ --recursive",
     "test-all": "npm run test && npm run integration"
   },
   "keywords": [
