--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "git-inspect": "./index.js"
   },
   "author": "nkazantsev",
-  "license": "MIT",
+  "license": "GNU AGPLv3",
   "dependencies": {
     "commander": "^2.17.1",
     "lodash": "^4.17.10",
