--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "commander": "^2.17.1",
     "lodash": "^4.17.10",
-    "nodegit": "^0.22.2"
+    "nodegit": "^0.22.2",
+    "ora": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
