--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "commander": "^2.17.1",
     "lodash": "^4.17.10",
-    "nodegit": "^0.22.2",
+    "nodegit": "0.23.0-alpha.1",
     "ora": "^3.0.0"
   },
   "devDependencies": {
