Add load config file
Add cosmicconfig npm for loading config
Add load mechanics to bin file
Change config schema

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "license": "GNU AGPLv3",
   "dependencies": {
     "commander": "^2.17.1",
+    "cosmiconfig": "^5.0.6",
     "lodash": "^4.17.10",
     "nodegit": "0.23.0-alpha.1",
     "ora": "^3.0.0"
